--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,6 +1,5 @@
 name: Upload Python Package
 
-# Trigger the workflow on push to any tag that starts with "v"
 on:
   push:
     tags:
@@ -35,9 +34,17 @@ jobs:
       - name: List files for debugging
         run: ls -l dist  # List the contents of the dist directory
 
-      # Step 6: Publish the package to PyPI
+      # Step 6: Find and upload the latest distribution files
       - name: Publish to PyPI
         env:
           TWINE_USERNAME: __token__  # Use __token__ for authentication
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}  # Use the PyPI API token stored as a secret
-        run: twine upload dist/*  # Upload the built distributions to PyPI
+        run: |
+          # Find the latest distribution files
+          latest_files=$(ls -t dist | grep -E '^numan_plus-[0-9]+.[0-9]+.[0-9]+.*\.(tar\.gz|whl)$')
+          
+          # Upload each latest file individually
+          for file in $latest_files; do
+            echo "Uploading $file"
+            twine upload "dist/$file"
+          done
