--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       # Step 2: Set up Python environment
-        - name: Set up Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'  # Specify the Python version
@@ -41,7 +41,7 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}  # Use the PyPI API token stored as a secret
         run: |
           # Extract the version from the tag
-          TAG_NAME=$(echo "${GITHUB_REF#refs/tags/}")  # Get the tag name without "refs/tags/"
+          TAG_NAME="${GITHUB_REF#refs/tags/}"  # Get the tag name without "refs/tags/"
           VERSION="${TAG_NAME#v}"  # Remove the 'v' prefix
 
           echo "Version extracted from tag: $VERSION"
